test(pet-v2): improve unit test coverage, eliminate comments and eradicate any() matchers
- Cover all branches and edge cases in PetV2DomainMapper, FindPetV2Impl, PetV2SearchCriteriaRequest and PetV2Response.
- Eradicate redundant comments across all Pet V2 unit test suites.
- Replace static hardcoded strings with dynamic random generators.
- Eradicate permissive any() Mockito matchers in favor of exact arguments and strongly typed argThat matchers.